--- a/oracle/20170327.md
+++ b/oracle/20170327.md
@@ -33,3 +33,35 @@
 1. oracle linux 
 2. 构造一些磁盘，安装GI-ASM
 3. 安装RDBMS-DATABASE
+
+步骤： 
+1. RDBMS delete;oracle用户 dbca
+2. ASM delete;grid用户 asmca
+3. 创建新盘。
+## HA High Availihty
+- 解决
+- ORACLE 自身不带高可用，带负载均衡。通过GI的：
+	- cluster 实例高可用
+	- ASM 存储高可用
+一台服务器不能并存两个实例，除非是RAC，ASM在stand alone运行模式下，ASM实例可以和数据库实例并存的。还可以保护数据库
+```
+oracleasm config -i
+oracleasm init
+oracleasm createdisk ASMDISK01 /dev/svdh           -09
+oralceasm listdisks
+ls /dev/oracleasm/disks/
+建集群脚本
+cat /etc/oratab
+grid asmca
+oracle用户
+dbca (OLTP联机交易，并发巨大，数据处理基于时间点到替换操作；OLAF联机分析,并发巨小，基于时间范围内，所有数据密集运算；BATCH批处理，有时联机交易，有时联机分析)；全局数据库名，域名，用于分布式事务区分；配置企业管理器;SGA不能大于内存大小；block size 是操作系统块（一般4K）的倍数；processes，服务器并发数，包括了用户、服务器、守护进程；字符集，数据库字符集,用于存储元数据（对象命名）采用的,选用通用的，方便迁移(char\varchar/long/clob默认采用数据库字符集，nchar/nvarchr/nlone不是，用户数据用)，国家语言字符集,；
+ps -aux|grep -i pmon
+```
+运维要掌握的：
+```
+cat /etc/oratab
+cd /$ORCLE_HOME/install/
+cat portlist.ini
+cat /etc/oraInst.loc	显示的目录记录了装了那些ORACLE软件
+	到那个目录，cat ContentsXML/inventory.xml
+```
