--- a/oracle/20170327.md
+++ b/oracle/20170327.md
@@ -59,9 +59,248 @@ ps -aux|grep -i pmon
 ```
 运维要掌握的：
 ```
-cat /etc/oratab
-cd /$ORCLE_HOME/install/
-cat portlist.ini
+cat /etc/oratab (装了软件没有，装了库才有)
+cd /$ORCLE_HOME/install/  ;cat portlist.ini (EM的端口)
+
 cat /etc/oraInst.loc	显示的目录记录了装了那些ORACLE软件
 	到那个目录，cat ContentsXML/inventory.xml
 ```
+# 安装ORACLE 11G GRID（AMS + DBMS）
+	- 客户端连入
+	- 企业管理器EM
+## host 
+1. root
+- vim /etc/host #避免直接给出IP
+### 配置存储 root
+```
+ll /dev/xvd*
+oracleasm configure -i (grid,asmadmin,y,y)
+oracleasm init
+ll /dev/oracleasm/disks
+oracleasm createdisk ASMDISK01 /dev/xvdb    #(1-13,a-n)
+oracleasm listdisks
+ll /dev/oralceasm/disks
+```
+### 安装ASM（grid)
+```
+cd  /stage/grid
+./runInstaller
+	
+which oraenv (用此程序配置环境变量,尽在当前会话有效;为了安全，不用在.bashrc/.bash_profile中配置)
+. oraenv
+env|grep oracle
+asmca
+```
+### 安装ORACLE (ORACLE)
+```
+./runInstaller (install database software only;single instance;enterprise edition;)
+dbca 
+```
+### ASM管理
+```
+su - grid
+. oraenv
+asmcmd
+	pwd
+	ls -l
+	cd data
+	cd orcl
+	ll	(分目录放文件)
+	cd datafile (用户数据文件)
+```
+### ORACLE管理
+- sys 超级数据库管理员，最大权限用户。必须用sysdba身份
+- system 默认数据库创建完的两个用户（可以lock，把sysdba授权给其他用户）。
+- 本机登陆(生产环境禁用本机登录)
+```
+. oraenv
+which sqlplus
+sqlplus / as sysdba 
+```
+- 网络登录(必须要有listener)
+```
+服务器端：
+su - grid
+. oraenv
+which lsnrctl
+lsnrctl status
+	服务汇总，多个服务实例都显示在这里。
+客户端连接服务名，由ORACLE分配具体连接到哪个实例。
+服务是一个对象，有属性、方法
+
+自己创建服务：(生产环境，每个应用单独建立一个,EM可以监控每个服务状况,可以溯源)
+sqlplus / as sysdba
+	desc dbms_service
+	exec dbms_service.create service('JAMES','james');
+	exec dbms-service.start
+lsnrctl status
+客户电脑：
+sqlplus system/oracle@//ora11gnf:1521/orcl.example.com
+另一种官方免费客户端软件：
+	linux:	/u01/app/oracle/product/11.2.0/dbhome_1/sqldeveloper/sqldeveloper.sh	(jre,jdk里带,不用安装，解压运行)
+```
+下午：
+1. 使用RDBMS
+	- 数据库是一个空间，用表空间来隔开，存储表的空间	tablespace (system,sysaux)-> datafile
+		- 小文件表空间 1个以上文件组，400万*db_block_size
+		- 大文件表空间 有且只有1哥文件组，40亿*db_block_size
+		- create talbel 时指定表空间，不指定，放在用户默认表空间，用户没有默认表空间，放在数据库默认表空间。
+		- undo data 存放在undotablespace.(redo,控制文件等不存在表空间)	
+		- temporay表空间临时表用
+	- 使用EM
+	```
+	. oraenv
+	which emctl
+	emctl status dbconsole
+	emctl start dbconsole
+	```
+	- 建用户
+		- authenticate
+		- access
+		- 权限，分系统权限，对象权限
+			- create table 只能为自己见表
+			- create anytable 能为其他用户建表。
+			- create session 允许登录
+	- 用户和模式 user/schema
+		- 用户：用来认证的
+		- 模式：用来逻辑组织对象的
+	- (生产环境中)应用服务器访问数据库的用户要和表的宿主用户不一样，按需分配权限。
+	- roles 角色：权限的集合。（改的权限可以提供密码保护）
+
+	- 数据库启动关闭
+		- shutdown
+			- normal:	
+				- 新建连接不允许；
+				- 等所有现存连接显示退出；
+				- checkpoint;
+				- 关实例。
+			- transactionoal:
+			- immediate:	立即关闭。(关的时候有大的事务，要回滚事务，有时候还要慢些)
+			- abort:		异常关闭。(不做checkpoint)
+		- startup
+			- 启动实例(startup nomount)
+				- 读参数文件(数据库服务器上，二进制；alter system;alter session;也可以create pfile from spfile;转为文本编辑)，
+				- $ORACLE_HOME/dbs/spfile (spfile<oracle_sid.ora)(init<oracle_sid.ora)
+			- 通过实例找打到应控制文件(alter database mount)(直接到 mount：startup mount)
+			- 读取控制文件内容，找到数据文件， 把数据文件置于读写模式(alter database open)
+		- 通过grid(建议采用)
+		```
+			which srvctl
+			srvctl config database -d orcl
+			srvctl stop database -d orcl
+			srvctl start database -d orcl
+		```
+	- 加减磁盘
+		- asmca
+# 处理并发
+一行数据同时多个读写，有锁，谁发起的锁，找到锁。
+ORACLE软件设计遵从ACID（原子性、、隔离性、）；强一致性（其他数据库弱一致性），任何时间我在数据库表上看到的数据是准确的；
+```
+	隔离性
+	begin transation
+		set trasation isoation
+		set stdenet level
+	end transation
+```
+## 锁
+- 对象锁（表，索引）
+	- dirty read	脏读(未提交，其他事务可以读)
+	- read commit	读提交(ORACLE默认)
+	- repeatable read 可重复读(ORACLE事务读的数据是事务开始的时间点时的数据，中间有UPDATE也不管。)
+	- 串行化读(ORACLE事务读的数据是事务开始的时间点时的数据，中间有insert也不管。)
+- 为了实现上面的公能，锁，行锁，支持表锁(lock table,标准SQL)，无块锁、数据库锁、实例锁。
+- 锁只是一个申明，没有添加到数据上。
+- 普通select无锁。除了select ... for update;
+- 四个原则：
+	- 读不阻塞读
+	- 读不阻塞写
+	- 写不阻塞读
+	- 写阻塞写
+- undo date,在buffer cache,读的时候若数据改变了，读的是undo data，
+	- 事务commit了，相应的undo data就不用了(空间有压力是被覆盖,undo_retention)。这个时候要读的话，会报“快照过旧”；在大修改的同时，并发需要同时做大查询，容易出这个错，可以做个专门的查询库。
+- 制造锁：
+	- 一个事务update一行，未commit,另一个事务也update这一行。
+- 对象锁 模式
+	- 读锁	Share
+	- 写锁	X	exclusice
+	- 独占行锁
+	- 行独占表锁
+	> update 产生独占行锁、行独占表锁。
+## 解决锁
+- kill
+- rollback
+## 查看锁
+- EM>Performance>Instance Locks
+# 撤销表空间
+# ORACLE系统问题的发现
+EM中的Alert Log Contents
+# 接管数据库工作：
+1. 建立基线，我接管之前是什么样子。
+	- EM中，server页面，看Alert History 
+	- 没有EM，文件在
+```
+	SQL> show parameter diag
+
+	NAME				     TYPE	 VALUE
+	------------------------------------ ----------- ------------------------------
+	diagnostic_dest			     string	 /u01/app/oracle
+	cd /u01/app/oracle/diag/rdbms/orcl/orcl/trace
+	cat alert_orcl.log
+```
+	- which adrci	(不需要登录数据库)
+		- help
+		- show incident
+2. 告警发送(EM>Notification Methods;再到对象的编辑界面编辑Thresholds)
+	- smtp
+	- snmp (短信)
+# 运维技能
+## 脚本
+- linux 区分大小写
+```
+vim test.sql
+sqlplus test/oracle @test.sql
+```
+```
+mv test.sql test.sql.sh
+vim test.sql.sh
+	export ORACLE_HOME
+	export ORACLE_SID=
+	export PATH=
+	sqlplus test/oracle <<!
+	select * from tb1;
+	exit;
+	!
+``` 
+- 感叹号包围的是嵌入命令，可以改为其他符号。
+## 备份恢复
+- 主要指物理级别的备份恢复。
+	- datafile
+	- control file
+	- redo log
+	- archive log
+	- spfile
+	- orapw.
+- 工具
+- 模式
+	1. 热备,要求在“归档日志”模式(archive log list;)
+	2. 冷备，只能恢复到冷备的那个时间点。(快照)
+	- 冷备后改为归档模式，之前的冷备份不能用。
+	- 归档日志放在Fast Recovery Area。
+	- 备份最好放在一个集中存储
+- 热备方法一：
+	```
+	alter tablespace test begin backup;
+	cp file
+	alter tablespace test end backup;
+	```
+	- redo log循环覆盖，不用备，备archive log
+	- cp 的文件不知道是否坏。
+	- cp 的文件大小不变
+	- cp 的文件名最好打上时间戳。
+	- cp 出来的文件保存过程中不知是否损坏。
+- ORACLE专门备份工具RMAN
+	- 不备redu log、密码文件
+	- 读control file,之中记录的文件，都可以被备份。
+		- whole 备：database的控制文件、数据文件、spfile。(备份的力度)
+		- full 备：完全备，增量备。(备份的模式)
+- EM备份
