--- a/oracle/20170327.md
+++ b/oracle/20170327.md
@@ -272,7 +272,10 @@ vim test.sql.sh
 	!
 ``` 
 - 感叹号包围的是嵌入命令，可以改为其他符号。
+
+create talbespace testts '+DATA';	(不用指定具体路径)
 ## 备份恢复
+### 备份
 - 主要指物理级别的备份恢复。
 	- datafile
 	- control file
@@ -303,4 +306,37 @@ vim test.sql.sh
 	- 读control file,之中记录的文件，都可以被备份。
 		- whole 备：database的控制文件、数据文件、spfile。(备份的力度)
 		- full 备：完全备，增量备。(备份的模式)
+	- image copy方式不能备份到磁带上，是为了提高备份恢复速度设计的。
 - EM备份
+#### RMAN Catalog
+- 记录备备份数据库的控制文件
+- 10个以上数据库 控制文件的备份使用这个。
+```
+使用RMAN Catalog:
+rman target / catalog rcadmin/orcale
+	create catalog;
+	register database;
+```
+### 恢复
+1. 备份先还原，(restore)(不完全恢复)
+2. 然后应用自备份时间点到损坏时间点所有归档日志。(recover)
+- 控制文件和服务器参数文件坏了，尽量不要用备份。用多份控制文件，放在不同的物理介质。参数文件坏了，数据库不当机，内存中还有,但是静态参数不能修改了(create pfile from spfile)。
+- ORACLE支持块级别的恢复，必须在归档模式。
+- system\undo\数据文件损坏，database shutdown abort,temp表空间损坏，没有事，其他表空间可以在线恢复。(restaore tablespace testts;recover tablespace testts;)
+- 在RMAN
+```
+list failures;
+advise failures;
+repair failures;
+```
+#### 快速恢复
+- 条件：
+	1. 归档模式
+	2. image copy 
+```
+RMAN
+switch datafile 8  to copy;
+recover datafile 8;
+sql 'alter tablespace ts2 online;'
+```
+- 可以用于迁移，换存储，迁移到ASM。
