--- a/oracle/20170327.md
+++ b/oracle/20170327.md
@@ -155,6 +155,8 @@ which emctl
 emctl status dbconsole
 emctl start dbconsole
 ```
+加装、安装EM，通过dbca,最后一天视频有。
+emca
 ## 建用户
 	- authenticate
 	- access
@@ -251,7 +253,8 @@ EM中的Alert Log Contents
 	- which adrci	(不需要登录数据库)
 		- help
 		- show incident
-2. 告警发送(EM>Notification Methods;再到对象的编辑界面编辑Thresholds)
+2. 做备份
+3. 告警发送(EM>Notification Methods;再到对象的编辑界面编辑Thresholds)
 	- smtp
 	- snmp (短信)
 # 运维技能
@@ -343,10 +346,7 @@ sql 'alter tablespace ts2 online;'
 - 可以用于迁移，换存储，迁移到ASM。
 # 使用闪回技术
 - 在生产系统不建议使用
-- 条件:(在database mount状态下做)
-	- SUPPLEMENTAL_LOG_DATA
-	- EXECUTE ON DBMS_FASHBACK
-	- SUPPLEMENTAL_LOG_DATA_PK
+- 条件:(在database mount状态下做) - SUPPLEMENTAL_LOG_DATA - EXECUTE ON DBMS_FASHBACK - SUPPLEMENTAL_LOG_DATA_PK
 	- SELECT ANYTRANSACTION
 - 应对用户逻辑错误(drop table;truncate;insert;update;delete)，前面都是应对物理错误。
 - 若用物理的恢复来应对逻辑错误，代价太高。应为他做不到细粒度的恢复。
@@ -368,3 +368,54 @@ sql 'alter tablespace ts2 online;'
 	startup mount
 	alter database open resetlogs;
 	```
+最后一天：
+# 空间管理（预警）
+- oracle managed files (OMF),使用ASM，有相应的保护，建议使用OMF，一般的文件系统，不建议用。
+# 碎片整理
+```
+alter table employees shrink space compact;	(整理块中的行数据和空闲空间)
+alter table employees shrink spaace;	(移动高水位)
+```
+PostgreSQL
+范式
+- 表压缩
+- 支持4k扇区磁盘	
+	- 日志使用4KB
+	- 数据文件使用4KB
+# 数据迁移
+## 物理
+(大于10G的数据迁移建议使用)。1.异构平台。2.同构平台（克隆）
+	- 操作系统读文件的：endian(字节码序)(windown\linux是小字节码序，AIX是大字节码序，不兼容)
+		- big endian
+		- little endian
+	- oracle提供字节码序的转换。
+	- 要求：
+		- 版本（compatible）10以上
+	- 过程
+		1. 源表空间置于只读
+		2. 使用数据泵提取元数据（定义）
+		3. endian格式是否一致，不同使用RMAN转换数据文件(建议在目标上做，源上可能还有业务)。
+		4. 传送数据文件到目标(管理数据不用迁移，system\sysaux表空间)
+		5. 使用数据泵导入元数据
+		6. 目标将表空间置于读写状态
+> 按应用来分配表空间。
+在视频中有EM传输表空间。
+## 逻辑
+- goldengate:应用软件，与不同的厂商签协议，可以访问不同厂商的redolog,转译成goldengate格式，再转译成SQL;逻辑的导入到出，适用于不能共用物理文件的系统间,不同版本间，异构平台间。慢，增量
+# 从应用角度，正对应用的监控。
+- 联机交易，并发巨大，
+	1. select balance from account where accout='1000'
+	2. 这类语句，需要绑定变量。共享内存。
+	3. 怎么找到此类语句？
+		EM--Performance---Duplicate SQL
+
+
+
+	1. 语法检查
+	2. 语义检查
+	3. 权限检查
+	4. 索引
+	5. 关联次序
+	6. 关联方法 
+消耗CPU，内存。
+2208309
