--- a/linux/运维笔记.md
+++ b/linux/运维笔记.md
@@ -76,5 +76,5 @@ ping 192.168.0.1 | logger -it logger_test -p local3.notice &
 -t logger_test 每行记录都加上“logger_test”这个标签
 -p local3.notice 设置记录的设备和级别
 ```
-
+- 直接发向服务器  
 `logger -n IP system reboot for she`
