--- a/python/1.md
+++ b/python/1.md
@@ -1,7 +1,7 @@
 # 信通部组织，python兴趣组
 老师:徐;H3C	系统方向，linux。
 pycharm
-
+id(变量)	查看内存位置
 - 5个半天时间。
 # first day
 豆瓣 全用python编写。
@@ -15,3 +15,28 @@ pycharm
 - 三引号可以在其中用双、单引号，可以换行。
 - print r'fddafafkf  \t fdfsa'  #自然字符串。
 # second day
+## 数字类型
+- 整数l
+- 浮点
+- 复数j
+## 序列
+len()
+max()	
+cmp()	比较，
+字符串可看成序列
+**序列包括字符串和元组**
+
+b='abcdef'
+b[起始:结束:步长]
+## 运算符
+-=
++=
+- 逻辑运算符
+and
+or
+not	(!)
+## 元组
+元组和列表相似，但和字符串一样是不可变的。
+单一元组要加","不然会被定义为字符串。	a=('dd',)
+
+通过PYTHOY 编写运算程序，计算用户输入的运算包括运算符号。
