--- a/think/2017-10-1.md
+++ b/think/2017-10-1.md
@@ -13,3 +13,10 @@
 1. git clone 项目
 2. firefox: about:debugging,导入文件。
 3. 配置地址，即可使用。
+## NIS
+## wordpress
+1. 安装时，单独那install.php不能运行,未找到那里做了限制；改成2install.php就可以，然后跳转到setup-config.php.
+## MYSQL
+1. 安装完成后，运行mysql_secure_installation.新加的用后才能登录的。
+## 网卡问题
+1. iwconfig wlan0 power off ; ip link set wlan0 down. ip还是能ping通，为何。
