--- a/work/20171013西昌攀枝花.md
+++ b/work/20171013西昌攀枝花.md
@@ -1,7 +1,10 @@
 1. 星期一找刘捷，了解：
-	1. 具体任务内容。
+	1. 具体任务内容,要达到的目的。
 	2. 王卓总指出的问题有哪些。(也可问吴凯军)
 2. 西昌飞机时间靠后，先到西昌，再到攀枝花。
 	1. 西昌吴凯军。
 	2. 攀枝花卢炳德。
 3. 最后形成总结报告。
+# 行程
+1. 到信通经理那里报道。
+2. 我熟悉的部分？ 
